--- a/frontend/app/views/directives/comments/commentDisplayDirective.html
+++ b/frontend/app/views/directives/comments/commentDisplayDirective.html
@@ -1,4 +1,4 @@
-<div class="comment uk-padding uk-padding-remove-vertical">
+<div class="comment uk-padding uk-padding-remove-right uk-padding-remove-vertical">
   <!-- enabled comment view -->
   <div ng-if="comment.enabled">
 
