--- a/frontend/app/views/post/PostViewController.html
+++ b/frontend/app/views/post/PostViewController.html
@@ -1,15 +1,31 @@
 <main ng-if="post && post.enabled" class="uk-container-small uk-margin-auto">
-  <h1>{{post.title}}</h1>
-  <p>POST BY: {{post.user.username}}</p>
-  <p>Bookmarked: {{post.hasUserBookmarked}}</p>
-
-  <button ng-disabled="mutex.bookmark" ng-if="isUser" ng-click="toggleBookmark()">TOGGLE BOOKMARK</button>
-
-  <comment-like-handler-directive total-votes="post.totalLikes" user-vote="post.userVote" send-vote-fn="callback.vote"></comment-like-handler-directive>
+  <div class="post-header">
+    <div class="post-meta">
+      <h1>
+        <button ng-if="isUser" ng-disabled="mutex.bookmark" ng-click="toggleBookmark()" class="no-style-button primary-button">
+      <span ng-show="post.hasUserBookmarked">
+        <span class="iconify large-iconify"
+              data-icon="mdi-bookmark-check"
+              data-inline="false"></span>
+      </span>
+          <span ng-show="!post.hasUserBookmarked">
+        <span class="iconify large-iconify"
+              data-icon="mdi-bookmark-check-outline"
+              data-inline="false"></span>
+      </span>
+        </button>
+        <span> - </span>
+        {{post.title}}
+      </h1>
+      <p>POST BY: {{post.user.username}}</p>
+    </div>
+    <div class="post-vote-handler uk-padding-small">
+      <comment-like-handler-directive total-votes="post.totalLikes" user-vote="post.userVote" send-vote-fn="callback.vote"></comment-like-handler-directive>
+    </div>
+  </div>
 
   <article ng-if="post.body">
     <editable-post-body-directive body="post.body" is-editable="isUser && post.owner" send-update-fn="callback.edit"></editable-post-body-directive>
-
   </article>
 
   <div>
