work on post view

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -397,3 +397,10 @@ button.link-muted, a.link-muted{
   color: $moovify-disabled;
   cursor: none;
 }
+
+.disabled-button,
+.disabled-button:disabled,
+.disabled-button:hover,
+.disabled-button:hover:disabled{
+  color: $moovify-disabled;
+}
