Added titles and corrected tiny mistakes

--- a/frontend/app/views/directives/fetch/fetchCommentsDirective.html
+++ b/frontend/app/views/directives/fetch/fetchCommentsDirective.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-show="comments.length === 0" class="uk-margin-small-top">
-    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'COMMENT_NOT_FOUND_PROFILE' | translate}}</h1>
+    <h1 class="uk-text-meta uk-text-center uk-text-bold">{{'COMMENT_NOT_FOUND' | translate}}</h1>
   </div>
   <div ng-show="comments.length > 0">
     <div ng-repeat="comment in comments">
