--- a/frontend/app/views/directives/listEntries/postListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/postListEntryDirective.html
@@ -46,7 +46,7 @@
       <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
         {{'MOVIES_DISCUSSED' | translate}}
         <span ng-repeat="movie in post.movies">
-          <a ng-href="/movies/{{movie.id}}">
+          <a ng-href="/movie/{{movie.id}}">
             {{movie.title}}
           </a>
         </span>
