--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -296,6 +296,8 @@ form {
 
 .color-div {
   background-color: #30475e;
+  min-height: 100vh;
+  display: flex;
 }
 
 .image-profile-shape {
@@ -361,4 +363,8 @@ button.like-post-button:hover, button.like-comment-button:hover{
 
 .separator {
   border-bottom: 2px solid #ECECEC
+}
+
+.tab-padding {
+  padding-top: 10px;
 }
