--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="uk-width-expand uk-padding-small"
-             style="background: #ececec; display: inline-block; height:100%;"
+             style="background: #ececec; height: 100vh"
              ng-if="user.id"
         >
 
