Changed profile, added pluralization, changed post route

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -295,8 +295,9 @@ form {
 }
 
 .color-div {
-  background-color: #30475e;
-  min-height: 100vh;
+  background-color: #222831;
+  height: auto;
+  min-height: 557px;
 }
 
 .image-profile-shape {
