--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -18,8 +18,8 @@
   </div>
 
   <div class="main-page color-div">
-    <div class="uk-padding-remove" uk-grid>
-      <div class="uk-width-1-3">
+    <div class="uk-padding-remove uk-margin-remove-bottom" uk-grid>
+      <div class="uk-width-1-3" >
         <br><br><br><br><br>
         <div class="profile-details-position uk-text-primary">
           <div class="uk-text-danger" ng-show="avatar.error">{{'FORM_AVATAR_SIZE_ERROR' | translate}}</div>
@@ -75,13 +75,13 @@
         </div>
 
       </div>
-      <div class="uk-width-2-3">
+      <div class="uk-width-2-3" >
         <div style="background: #222831">
           <tab-display-directive tab-selected="showing.value" tabs="tabs" ng-if="user.id"></tab-display-directive>
         </div>
 
         <div class="uk-width-expand uk-padding-small"
-             style="background: #ececec; height: 100vh"
+             style="background: #222831; height: auto"
              ng-if="user.id"
         >
 
