--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -1,10 +1,8 @@
-<div ng-show="loadUserFinished">
-  <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light"
-       data-src="/resources/images/background.jpg"
-       uk-img
-  >
-  </div>
+<div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light"
+     data-src="/resources/images/background.jpg"
+     uk-img></div>
 
+<div ng-show="loadUserFinished">
   <div class="uk-width-1-3 image-profile-position">
     <div class="uk-transition-toggle" tabindex="0">
       <div class="image-profile-shape elevation-effect" uk-form-custom>
@@ -31,8 +29,18 @@
             </h2>
           </div>
 
-          <div class="uk-margin-small-top uk-text-center"><span class="uk-text-bold">@</span>{{user.username}}</div>
+          <div class="uk-margin-small-top uk-margin-bottom uk-text-center">
+            <span class="uk-text-bold">@</span>{{user.username}}
+          </div>
 
+          <div class="uk-margin-small-top uk-text-center" ng-if="user.id && !profileSameAsLogged()">
+            <a class="uk-button-default uk-border-rounded follow-btn" ng-show="!isFollowed" ng-click="followUser()">
+              {{'USER_FOLLOW' | translate}}
+            </a>
+            <a class="uk-button-default uk-border-rounded uk-text-danger unfollow-btn" ng-show="isFollowed"ng-click="unfollowUser()">
+              {{'USER_UNFOLLOW' | translate}}
+            </a>
+          </div>
 
           <hr class="uk-divider-icon">
 
@@ -81,7 +89,7 @@
         </div>
 
         <div class="uk-width-expand uk-padding-small"
-             style="background: #ececec; height: 100vh"
+             style="background: #ececec; height: auto"
              ng-if="user.id"
         >
 
