--- a/frontend/app/views/directives/comments/commentTreeDirective.html
+++ b/frontend/app/views/directives/comments/commentTreeDirective.html
@@ -2,7 +2,7 @@
   <ul class="ul">
     <li class="li" ng-repeat="comment in comments">
       <div>
-        <comment-display-directive comment="comment"></comment-display-directive>
+        <comment-display-directive depth="depth" comment="comment"></comment-display-directive>
       </div>
     </li>
   </ul>
