--- a/frontend/app/views/directives/comments/commentDisplayDirective.html
+++ b/frontend/app/views/directives/comments/commentDisplayDirective.html
@@ -21,18 +21,31 @@
                                        start-edit="callbackFunctions.startEdit"></editable-comment-body-directive>
     </div>
 
-    <div ng-if="isUser" class="comment-interactions uk-text-small">
-      <button class="no-style-button uk-link link-muted" ng-click="callbackFunctions.startReply.fn()"
-              ng-if="isUser && callbackFunctions.startReply">
-        <span uk-icon="icon: commenting; ratio 1"></span> REPLY</button>
+    <div class="comment-interactions uk-text-small">
+
+      <span ng-if="isUser">
+
+        <span ng-if="depth < 5">
+          <button class="no-style-button uk-link link-muted" ng-click="callbackFunctions.startReply.fn()"
+                  ng-if="isUser && callbackFunctions.startReply">
+           <span uk-icon="icon: commenting; ratio 1"></span> REPLY</button>
+        </span>
+
+        <span ng-if="depth >= 5">
+          <button class="no-style-button uk-link link-muted" ng-click="openGoToViewModal()">
+           <span uk-icon="icon: commenting; ratio 1"></span> REPLY</button>
+        </span>
+
+
+        <button ng-if="isAdmin" class="no-style-button uk-link link-muted" ng-click="openDeleteModal()">
+          <span uk-icon="icon: trash; ratio 1"></span> DELETE</button>
+
+        <button class="no-style-button uk-link link-muted" ng-if="isUser && comment.isOwner && callbackFunctions.startEdit"
+                ng-click="callbackFunctions.startEdit.fn()"><span uk-icon="icon: pencil; ratio 1"></span> EDIT</button>
+      </span>
 
       <a class="link-muted" ng-href="mailto:{{comment.user.email}}"><span uk-icon="icon: mail; ratio 1"></span> MAIL AUTHOR</a>
-
-      <button ng-if="isAdmin" class="no-style-button uk-link link-muted" ng-click="openDeleteModal()">
-        <span uk-icon="icon: trash; ratio 1"></span> DELETE</button>
-
-      <button class="no-style-button uk-link link-muted" ng-if="isUser && comment.isOwner && callbackFunctions.startEdit"
-              ng-click="callbackFunctions.startEdit.fn()"><span uk-icon="icon: pencil; ratio 1"></span> EDIT</button>
+      <a class="link-muted" ng-href="comment/{{comment.id}}"><span uk-icon="icon: plus-circle; ratio 1"></span> COMMENT VIEW</a>
     </div>
 
   </div>
@@ -69,7 +82,7 @@
 
     </div>
     <div ng-if="showChildren.value">
-      <comment-tree-directive comments="comment.children"></comment-tree-directive>
+      <comment-tree-directive depth="depth + 1" comments="comment.children"></comment-tree-directive>
     </div>
   </div>
 
@@ -84,9 +97,26 @@
     <p class="uk-padding-small">{{comment.body}}</p>
     <div class="uk-modal-footer uk-text-right">
       <button class="uk-button uk-button-default uk-modal-close uk-text-primary"
-              type="button" ng-click="avatar.file = undefined" ng-disabled="sendingDelete.value">KEEP COMMENT</button>
+              type="button" ng-disabled="sendingDelete.value">KEEP COMMENT</button>
       <button class="uk-button uk-button-primary" type="button"
               ng-disabled="sendingDelete.value" ng-click="confirmDelete()">DELETE COMMENT</button>
+    </div>
+  </div>
+</div>
+
+<!-- reply modal-->
+<div ng-if="isAdmin" id="go-to-comment-view-modal-{{comment.id}}" uk-modal>
+  <div class="uk-modal-dialog" ng-if="tryingReply">
+    <div class="uk-modal-header">
+      <h1 class="uk-modal-title">CONFIRM GO TO VIEW</h1>
+    </div>
+
+    <p>IN ORDER TO REPLY THIS COMMENT YOU MUST GO TO IT'S VIEW.</p>
+
+    <div class="uk-modal-footer uk-text-right">
+      <button class="uk-button uk-button-default uk-modal-close uk-text-primary"
+              type="button" ng-disabled="sendingDelete.value">KEEP COMMENT</button>
+      <a class="uk-button uk-button-primary" href="comment/{{comment.id}}">GO TO VIEW</a>
     </div>
   </div>
 </div>
