Fixed a visual bug in comment view and the following icon in user display

--- a/frontend/app/views/directives/comments/editableCommentBodyDirective.html
+++ b/frontend/app/views/directives/comments/editableCommentBodyDirective.html
@@ -1,5 +1,5 @@
 <div>
-  <p ng-show="!editing.value">{{body}}</p>
+  <p class="uk-text-break" ng-show="!editing.value">{{body}}</p>
   <form ng-if="editing.value" name="editForm">
     <fieldset class="uk-fieldset" ng-init="editableBody.value = body">
       <div class="uk-margin">
