--- a/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
@@ -8,17 +8,16 @@
     <div class="uk-flex">
       <div class="uk-width-expand">
         <a ng-href="/users/{{user.id}}" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin}">
-          <span ng-if="loggedUser.logged && user.userFollowing">
+          <span ng-if="user.userFollower">
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
+            <span>-</span>
           </span>
           {{user.username}}
             <span ng-if="isAdmin">
                 <span>-</span>
                <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
             </span>
-          <div ng-if="loggedUser.logged && user.userFollowed">
-            <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'ADMIN_TITLE' | translate}}" ></span>
-          </div>
+
         </a>
         <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
           {{'MIN_USER_DISPLAY_META_NAME_VOTES' | translate: { name: user.name, totalVotes: user.totalLikes };}}
