--- a/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
@@ -1,13 +1,13 @@
 <div class="uk-grid-small uk-flex uk-flex-wrap uk-flex-row uk-flex-center" uk-grid>
   <div class="uk-width-1-3">
-    <a href="/users/{{user.id}}">
+    <a href="/user/{{user.id}}">
       <img class="circle-comment uk-comment-avatar" src="{{user.avatar}}" alt="">
     </a>
   </div>
   <div class="uk-width-2-3 margin-user-home-display">
     <div class="uk-flex">
       <div class="uk-width-expand">
-        <a ng-href="/users/{{user.id}}" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin}">
+        <a ng-href="/user/{{user.id}}" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin}">
           <span ng-if="user.userFollower">
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
             <span>-</span>
