--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -34,7 +34,7 @@
           </div>
 
           <div class="uk-margin-small-top uk-text-center" ng-if="user.id && !profileSameAsLogged()">
-            <a class="uk-button-default uk-border-rounded follow-btn" ng-show="!isFollowed" ng-click="followUser()">
+            <a class="uk-button-default uk-border-rounded follow-btn" ng-show="!isFollowed && loggedUser.logged" ng-click="followUser()">
               {{'USER_FOLLOW' | translate}}
             </a>
             <a class="uk-button-default uk-border-rounded uk-text-danger unfollow-btn" ng-show="isFollowed"ng-click="unfollowUser()">
