--- a/frontend/app/views/directives/listEntries/userListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/userListEntryDirective.html
@@ -1,5 +1,5 @@
 <div class="uk-width-1-1">
-  <div class="uk-grid-small" uk-grid>
+  <div class="uk-grid-small uk-grid">
     <div ng-if="adminControls" class="uk-width-auto uk-margin-auto-vertical">
       <button class="uk-button uk-button-default uk-border-rounded uk-margin-right restore-btn"
               type="button" ng-click="recoverUser()"
@@ -8,14 +8,14 @@
       </button>
     </div>
     <div ng-if="!adminControls" class="uk-width-1-6 uk-margin-remove">
-      <a ng-href="/users/{{user.id}}">
+      <a ng-href="/user/{{user.id}}">
         <img class="image-user-display" ng-src="{{user.avatar}}" alt="">
       </a>
     </div>
     <div class="uk-width-expand uk-margin-small-top uk-margin-small-bottom" ng-class="{'uk-padding-remove-left margin-user-display':!adminControls}">
       <div class="uk-flex">
         <div class="uk-width-expand">
-          <a ng-href="/users/{{user.id}}" class="text-lead" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin(user)}">
+          <a ng-href="/user/{{user.id}}" class="text-lead" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle':isAdmin}">
           <span ng-if="loggedUser.logged && user.userFollower">
             <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
             <span>-</span>
