--- a/frontend/app/views/directives/listEntries/commentListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/commentListEntryDirective.html
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="uk-width-expand uk-margin-small-top uk-text-truncate">
-        <a class="uk-text-italic text-lead" ng-href="{{comment.url}}">
+        <a class="uk-text-italic text-lead" ng-href="{{'/comment/'+comment.id}}">
           {{getBodyFormatted(comment.body)}}
         </a>
         <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical uk-text-truncate">
