--- a/frontend/app/views/login/login.html
+++ b/frontend/app/views/login/login.html
@@ -57,12 +57,12 @@
                ng-click="login(user)"
         />
       </div>
-      <div class="uk-text-center uk-text-bold uk-text-muted uk-margin">{{'USER_LOGIN_NOACCOUNT' | translate}} <a ng-href="/signup">{{'USER_CREATE_SIGNUP' | translate}}</a></div>
+      <div class="uk-text-center uk-text-bold uk-text-muted uk-margin">{{'USER_LOGIN_NOACCOUNT' | translate}} <a ng-href="/signup">{{'USER_CREATE_SIGNUP_ALT2' | translate}}</a></div>
     </fieldset>
   </form>
 
   <div class="uk-text-center uk-text-bold">
-    <a href="/user/resetPassword">{{'USER_LOGIN_RESETPASSWORD' | translate}}</a>
+    <a href="/resetPassword">{{'USER_LOGIN_RESETPASSWORD' | translate}}</a>
   </div>
 </div>
 
