--- a/frontend/app/views/user/updatePassword.html
+++ b/frontend/app/views/user/updatePassword.html
@@ -96,7 +96,7 @@
 
   <div class="uk-margin-top uk-text-center">
     <span class="uk-text-bold uk-text-muted">{{'UPDATE_PASS_NO_TOKEN' | translate}}
-      <a class="uk-text-primary" href="/user/resetPassword">{{'UPDATE_PASS_RESEND_EMAIL' | translate}}</a>
+      <a class="uk-text-primary" href="/resetPassword">{{'UPDATE_PASS_RESEND_EMAIL' | translate}}</a>
     </span>
   </div>
 
