--- a/frontend/app/views/directives/comments/commentLikeHandlerDirective.html
+++ b/frontend/app/views/directives/comments/commentLikeHandlerDirective.html
@@ -1,7 +1,7 @@
 <div class="comment-like-handler">
 <!--  TODO se pone bien el uk disabled cuando hace falta pero el estilo no se muestra bien-->
 <!--  <button class="like-comment-button" ng-class="{'uk-disabled': sendingVote}" ng-click="sendVote(1)">-->
-  <button class="like-comment-button primary-button" ng-disabled="sendingVote" ng-click="sendVote(1)" ng-class="{'disabled-button': !isUser}">
+  <button class="like-comment-button primary-button" ng-disabled="sendingVote || !isUser" ng-click="sendVote(1)">
     <span ng-show="userVote > 0">
       <span class="iconify" data-icon="el:chevron-up" data-inline="false"></span>
     </span>
@@ -14,7 +14,7 @@
   </span>
 
 <!--  <button class="like-comment-button" ng-class="{'uk-disabled': sendingVote}"  ng-click="sendVote(-1)">-->
-  <button class="like-comment-button primary-button" ng-disabled="sendingVote"  ng-click="sendVote(-1)" ng-class="{'disabled-button': !isUser}">
+  <button class="like-comment-button primary-button" ng-disabled="sendingVote || !isUser"  ng-click="sendVote(-1)">
     <span ng-show="userVote < 0">
       <span class="iconify" data-icon="el:chevron-down" data-inline="false"></span>
     </span>
