--- a/frontend/app/views/directives/comments/commentTreeDirective.html
+++ b/frontend/app/views/directives/comments/commentTreeDirective.html
@@ -9,5 +9,6 @@
   <div ng-if="newReplyCount > 0" class="uk-padding-remove-horizontal uk-padding-small">
      <button class="no-style-button uk-link link-muted uk-margin-small-left"
              ng-disabled="loadingMore" ng-click="showMore()">SHOW {{newReplyCount}} MORE REPLIES</button>
+<!--    TODO FAUS PLURALIZE-->
   </div>
 </div>
