Added en messages in Postview

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -449,3 +449,11 @@ button:focus {
 .word-brake {
   word-break: break-all;
 }
+
+.primary-badge {
+  background-color: $moovify-primary-color-light;
+}
+
+.primary-badge:hover {
+  background-color: $moovify-primary-color-dark;
+}
