--- a/frontend/app/views/directives/comments/commentReplyDirective.html
+++ b/frontend/app/views/directives/comments/commentReplyDirective.html
@@ -4,7 +4,7 @@
       <textarea class="uk-textarea resize-vertical"
                 rows="5" name="replyBody"
                 ng-model="body.content"
-                placeholder="REPLY PLACE HOLDER"
+                placeholder="{{'WRITE_REPLY_COMMENT_PLACEHOLDER' | translate}}"
                 autofocus ng-disabled="sendingComment">
       </textarea>
     </div>
